bugfix and lækkerier